@@ -2179,6 +2179,35 @@ command to generate the output files.
     <glob pattern="*.pict1"/>
     <glob pattern="*.pict2"/>
   </mime-type>
+  <mime-type type="image/x-minolta-mrw">
+    <comment>Minolta raw image</comment>
+    <glob pattern="*.mrw" />
+  </mime-type> 
+  <mime-type type="image/x-canon-crw">
+    <comment>Canon raw image</comment>
+    <glob pattern="*.crw"/>
+    <glob pattern="*.cr2"/>
+  </mime-type>
+  <mime-type type="image/x-nikon-nef">
+    <comment>Nikon raw image</comment>
+    <glob pattern="*.nef"/>
+  </mime-type>
+  <mime-type type="image/x-kodak-dcr">
+    <comment>Kodak raw image</comment>
+    <glob pattern="*.dcr"/>
+  </mime-type>
+  <mime-type type="image/x-kodak-kdc">
+    <comment>Kodak raw image</comment>
+    <glob pattern="*.kdc"/>
+  </mime-type>
+  <mime-type type="image/x-olympus-orf">
+    <comment>Olympus raw image</comment>
+    <glob pattern="*.orf"/>
+  </mime-type>
+  <mime-type type="image/x-fuji-raf">
+    <comment>Fuji raw image</comment>
+    <glob pattern="*.raf"/>
+  </mime-type>
   <mime-type type="image/png">
     <_comment>PNG image</_comment>
     <magic priority="50">
