@@ -1,5 +1,12 @@
 2006-08-25  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: patch from Stephane Chauveau
+	<spam70@chauveau-central.net> and Eugenia Loli-Queru
+	<eloli@hotmail.com> to add many raw image types from digital cameras
+	(Closes: #4117)
+
+2006-08-25  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add a mime-type for musepack, patch from
 	Pino Toscano <toscano.pino@tiscali.it> (Closes: #6408)
 
